gcc/testsuite/rust/rustc/ui/issues/issue-46983_dg.rs
fn foo(x: &u32) -> &'static u32 {
    &*x
// { dg-error "" "" { target *-*-* } .-1 }
}

fn main() {}

